--- a/myPortfolio/about-styles.css
+++ b/myPortfolio/about-styles.css
@@ -1,44 +1,103 @@
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
-body, html {
-  height: 100%;
-  color: #777;
-  line-height: 1.8;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+html {
+  font-size: 10px;
 }
 
-/* First image (Logo. Full height) */
-.bgimg-1 {
-  background-image: url('backgroundimage.jpg.jpg');
-  background-repeat: repeat;
-  min-height: 100%;
+body{
+  background: url('./images/background.png.png');
+  background-position: 0 1000px;
+  font-family: 'Roboto' sans-serif;
 }
 
-/* Second image (Portfolio) */
-.bgimg-2 {
-  background-image: url("/w3images/parallax2.jpg");
-  min-height: 400px;
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 0;
+  margin-top: 4rem;
+  text-align: center;
 }
 
-/* Third image (Contact) */
-.bgimg-3 {
-  background-image: url("/w3images/parallax3.jpg");
-  min-height: 400px;
+h1 {
+  color: beige;
+  font-size: 5rem;
+  font-weight: 700px;
+  letter-spacing: 8px;
+  margin-bottom: 2rem;
 }
 
-.w3-wide {letter-spacing: 10px;}
-.w3-hover-opacity {cursor: pointer;}
+h2 {
+  color: beige;
+  font-size: 7rem;
+  font-weight: 400px;
+}
 
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
-    background-attachment: scroll;
-    min-height: 400px;
+.image{
+  margin-top: 10rem;
+  margin-bottom: 5rem;
+}
+
+p{
+  font-size: 2rem;
+  color: beige;
+  line-height: 5rem;
+  margin-bottom: 5rem;
+}
+
+.bottom{
+  display: inline-block;
+  padding: 2.7rem 7.5rem;
+  font-size: 2rem;
+  text-decoration: none;
+  color: beige;
+  border-radius: 10px;
+  transition: background 0.5s;
+}
+
+.bottom:hover {
+  background: black;
+}
+
+
+
+
+@media(min-width: 576px){
+  
+  .container{
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 3rem;
+      margin-top: 4rem;
+      text-align: center;
+    
+    }
+    
+    .image{
+      margin-top: 10rem;
+      margin-bottom: 5rem;
+    }
+    
   }
-}
+  
+  @media(min-width: 992px){
+    
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 3rem;
+      margin-top: 4rem;
+      text-align: center;
+    }
+
+    .image{
+      margin-top: 10rem;
+      margin-bottom: 5rem;
+    }
+
+  }
